--- a/tvartak/fix-issue-6325978/projects/sharepoint/RELEASE_NOTES
+++ b/tvartak/fix-issue-6325978/projects/sharepoint/RELEASE_NOTES
@@ -8,6 +8,16 @@ The following sections describe the release in detail and provide information th
 
 Web Site: http://code.google.com/p/google-enterprise-connector-sharepoint/
 
+Release 2.9.0-X2, April 17, 2012
+===========================================
+
+THIS IS A DEVELOPMENT BUILD THAT IS NOT SUPPORTED BY GOOGLE.
+
+If you have issues with this build, you can send email to
+google-enterprise-connectors-feedback@googlegroups.com.
+Google may not respond to every message.
+
+
 Release 2.8.4, January 13, 2012
 ====================================
 
