Refactoring SharepointConnectorType, part two. The main object was adding test cases to SharepointConnectorTypeTest.
Other changes:

* Removed the use of Collator from SharepointConnectorType. This was
  locale-specific and case-insensitive comparisons on fixed strings.
  I don't know if it was broken, say in Japanese, but it was wrong.

* Related to that, the case of the Password and aliasMap properties
  was inconsistent in at least two of: TestConfiguration.java,
  TestConfig.properties, and SharepointConnectorResources.java. Custom
  TestConfig.properties will have to be updated to use "aliasMap" and
  "Password" [sic].

* Replaced configKeys with two lists, CONFIG_LABELS (the same list as
  configKeys) and CONFIG_FIELDS (the list of actual form field names).
  The only difference is sharepointCrawlingOptions in the former becomes
  useSPSearchVisibility and feedUnPublishedDocuments in the latter. This
  is mostly for better testing, although it was using the labels instead
  of the fields in validateConfigMap, however, the two added fields do
  not need to be validated.

* Removed the configStrings map to use the ResourceBundle directly.

* Support a null kdcServer value, in addition to empty, for easier and
  more consistent testing of missing properties.

* Removed old validateConfig overload from before the addition of the
  ConnectorFactory parameter.

* Changed the script tag in the form snippet from language="JavaScript"
  to type="text/javascript".

* Renamed SPConstants field SHAREPOINT_CRAWLING_OPTION to
  SHAREPOINT_CRAWLING_OPTIONS and removed the unneeded constant
  EDIT_MODE (its value was boolean true).

Code review: http://codereview.appspot.com/6495084/

--- a/projects/sharepoint/config/SharepointConnectorResources_eu.properties
+++ b/projects/sharepoint/config/SharepointConnectorResources_eu.properties
@@ -2,7 +2,7 @@
 sharepointUrl=URLa arakatu
 domain=Domeinua
 username=Erabiltzaile izena
-password=Pasahitza
+Password=Pasahitza
 mySiteBaseURL=MySite URL(MOSS2007 aplikagarria)
 includedURls=Ondorengo ezaugarriak dituzten URLak gehitu
 excludedURls=Ez idatzi ondorengo ezaugarriak dituzten URLak
