--- a/projects/sharepoint/config/SharepointConnectorResources_fi.properties
+++ b/projects/sharepoint/config/SharepointConnectorResources_fi.properties
@@ -2,7 +2,7 @@
 sharepointUrl=Indeksoi URL-osoite
 domain=Verkkotunnus
 username=K\u00e4ytt\u00e4j\u00e4tunnus
-password=Salasana
+Password=Salasana
 mySiteBaseURL=OmanSivuston URL-osoite(Soveltuu: MOSS2007)
 includedURls=Sis\u00e4llyt\u00e4 URL-osoitteet, jotka vastaavat seuraavia malleja
 excludedURls=\u00c4l\u00e4 sis\u00e4llyt\u00e4 URL-osoitteita, jotka vastaavat seuraavia malleja
