--- a/projects/sharepoint/config/SharepointConnectorResources_gl.properties
+++ b/projects/sharepoint/config/SharepointConnectorResources_gl.properties
@@ -2,7 +2,7 @@
 sharepointUrl=Explorar URL
 domain=Dominio
 username=Nome de usuario
-password=Contrasinal
+Password=Contrasinal
 mySiteBaseURL=MySite URL(Aplicable para MOSS2007)
 includedURls=Inclu\u00edr os URL que coincidan cos patr\u00f3ns seguintes
 excludedURls=Non inclu\u00edr os URL que coincidan cos patr\u00f3ns seguintes
