--- a/projects/sharepoint/config/SharepointConnectorResources_ko.properties
+++ b/projects/sharepoint/config/SharepointConnectorResources_ko.properties
@@ -2,7 +2,7 @@
 sharepointUrl=URL \ud06c\ub864\ub9c1
 domain=\ub3c4\uba54\uc778
 username=\uc0ac\uc6a9\uc790 \uc774\ub984
-password=\ube44\ubc00\ubc88\ud638
+Password=\ube44\ubc00\ubc88\ud638
 mySiteBaseURL=MySite URL(MOSS2007\uc5d0\ub9cc \ud574\ub2f9)
 includedURls=\ub2e4\uc74c \ud328\ud134\uacfc \uc77c\uce58\ud558\ub294 URL \ud3ec\ud568
 excludedURls=\ub2e4\uc74c \ud328\ud134\uacfc \uc77c\uce58\ud558\ub294 URL\uc740 \ud3ec\ud568\ud558\uc9c0 \uc54a\uc74c
