--- a/projects/sharepoint/config/SharepointConnectorResources_nl.properties
+++ b/projects/sharepoint/config/SharepointConnectorResources_nl.properties
@@ -2,7 +2,7 @@
 sharepointUrl=URL crawlen
 domain=Domein
 username=Gebruikersnaam
-password=Wachtwoord
+Password=Wachtwoord
 mySiteBaseURL=URL van MijnSite (van toepassing op MOSS2007)
 includedURls=URL's opnemen die overeenkomen met de volgende patronen
 excludedURls=Geen URL's opnemen die overeenkomen met de volgende patronen
