--- a/projects/sharepoint/config/SharepointConnectorResources_pl.properties
+++ b/projects/sharepoint/config/SharepointConnectorResources_pl.properties
@@ -2,7 +2,7 @@
 sharepointUrl=Adres URL przeszukiwania
 domain=Domena
 username=Nazwa u\u017cytkownika
-password=Has\u0142o
+Password=Has\u0142o
 mySiteBaseURL=Adres URL witryny (dotyczy MOSS2007)
 includedURls=Uwzgl\u0119dniaj adresy URL pasuj\u0105ce do nast\u0119puj\u0105cych wzorc\u00f3w
 excludedURls=Nie uwzgl\u0119dniaj adres\u00f3w URL pasuj\u0105cych do nast\u0119puj\u0105cych wzorc\u00f3w
