--- a/projects/sharepoint/config/SharepointConnectorResources_vi.properties
+++ b/projects/sharepoint/config/SharepointConnectorResources_vi.properties
@@ -2,7 +2,7 @@
 sharepointUrl=Thu th\u1eadp th\u00f4ng tin URL
 domain=T\u00ean mi\u1ec1n
 username=T\u00ean ng\u01b0\u1eddi d\u00f9ng
-password=M\u1eadt kh\u1ea9u
+Password=M\u1eadt kh\u1ea9u
 mySiteBaseURL=MySite URL(\u00c1p d\u1ee5ng cho MOSS2007)
 includedURls=Bao g\u1ed3m URL Ph\u00f9 h\u1ee3p v\u1edbi c\u00e1c M\u1eabu Sau
 excludedURls=Kh\u00f4ng Bao g\u1ed3m URL Ph\u00f9 h\u1ee3p v\u1edbi c\u00e1c M\u1eabu Sau
