--- a/projects/sharepoint/config/SharepointConnectorResources_zh_TW.properties
+++ b/projects/sharepoint/config/SharepointConnectorResources_zh_TW.properties
@@ -2,7 +2,7 @@
 sharepointUrl=\u6aa2\u7d22\u7db2\u5740
 domain=\u7db2\u57df
 username=\u4f7f\u7528\u8005\u540d\u7a31
-password=\u5bc6\u78bc
+Password=\u5bc6\u78bc
 mySiteBaseURL=MySite \u7db2\u5740 (\u9069\u7528\u65bc MOSS2007)
 includedURls=\u5305\u542b\u7b26\u5408\u4e0b\u5217\u6a21\u5f0f\u7684\u7db2\u5740
 excludedURls=\u4e0d\u8981\u5305\u542b\u7b26\u5408\u4e0b\u5217\u683c\u5f0f\u7684\u7db2\u5740
