--- a/projects/sharepoint/config/SharepointConnectorResources_de.properties
+++ b/projects/sharepoint/config/SharepointConnectorResources_de.properties
@@ -2,7 +2,7 @@
 sharepointUrl=URL crawlen
 domain=Domain
 username=Nutzername
-password=Passwort
+Password=Passwort
 mySiteBaseURL=MeineWebsite-URL (anwendbar f\u00fcr MOSS2007)
 includedURls=URLs aufnehmen, die folgenden Mustern entsprechen
 excludedURls=Keine URLs aufnehmen, die folgenden Mustern entsprechen
