--- a/projects/sharepoint/config/SharepointConnectorResources_hu.properties
+++ b/projects/sharepoint/config/SharepointConnectorResources_hu.properties
@@ -2,7 +2,7 @@
 sharepointUrl=URL-ek felt\u00e9rk\u00e9pez\u00e9se
 domain=Domain
 username=Felhaszn\u00e1l\u00f3n\u00e9v
-password=Jelsz\u00f3
+Password=Jelsz\u00f3
 mySiteBaseURL=MySite URL(MOSS2007 eset\u00e9n)
 includedURls=Adjon meg a k\u00f6vetkez\u0151 mint\u00e1knak megfelel\u0151 URL-eket
 excludedURls=Ne tartozzanak bele azok az URL-ek, melyeknek mint\u00e1ja a k\u00f6vetkez\u0151
