--- a/projects/sharepoint/config/SharepointConnectorResources_cs.properties
+++ b/projects/sharepoint/config/SharepointConnectorResources_cs.properties
@@ -2,7 +2,7 @@
 sharepointUrl=Proch\u00e1zet adresu URL
 domain=Dom\u00e9na
 username=U\u017eivatelsk\u00e9 jm\u00e9no
-Password=Heslo
+password=Heslo
 mySiteBaseURL=Adresa URL m\u00fdch str\u00e1nek (plat\u00ed pro produkt MOSS2007)
 includedURls=Uve\u010fte adresy URL vyhovuj\u00edc\u00ed n\u00e1sleduj\u00edc\u00edm vzor\u016fm
 excludedURls=Neuv\u00e1d\u011bjte adresy URL vyhovuj\u00edc\u00ed n\u00e1sleduj\u00edc\u00edm vzor\u016fm
