--- a/projects/sharepoint/config/SharepointConnectorResources_da.properties
+++ b/projects/sharepoint/config/SharepointConnectorResources_da.properties
@@ -2,7 +2,7 @@
 sharepointUrl=Gennemgangswebadresse
 domain=Dom\u00e6ne
 username=Brugernavn
-Password=Adgangskode
+password=Adgangskode
 mySiteBaseURL=MySite URL(Relevante for MOSS2007)
 includedURls=Medtag webadresser, der stemmer overens med f\u00f8lgende m\u00f8nstre
 excludedURls=Medtag ikke webadresser, der stemmer overens med f\u00f8lgende m\u00f8nstre
