--- a/projects/sharepoint/config/SharepointConnectorResources_en_GB.properties
+++ b/projects/sharepoint/config/SharepointConnectorResources_en_GB.properties
@@ -2,7 +2,7 @@
 sharepointUrl=Crawl URL
 domain=Domain
 username=Username
-Password=Password
+password=Password
 mySiteBaseURL=MySite URL(Applicable for MOSS2007)
 includedURls=Include URLs Matching the Following Patterns
 excludedURls=Do Not Include URLs Matching the Following Patterns
