--- a/projects/sharepoint/config/SharepointConnectorResources_es.properties
+++ b/projects/sharepoint/config/SharepointConnectorResources_es.properties
@@ -2,7 +2,7 @@
 sharepointUrl=Rastrear URL
 domain=Dominio
 username=Nombre de usuario
-Password=Contrase\u00f1a
+password=Contrase\u00f1a
 mySiteBaseURL=URL de MiSitio (aplicable a MOSS2007)
 includedURls=Incluir URL que coincidan con los patrones siguientes
 excludedURls=No incluir URL que coincidan con los patrones siguientes
