--- a/projects/sharepoint/config/SharepointConnectorResources_fr.properties
+++ b/projects/sharepoint/config/SharepointConnectorResources_fr.properties
@@ -2,7 +2,7 @@
 sharepointUrl=Explorer l'URL
 domain=Domaine
 username=Nom d'utilisateur
-Password=Mot de passe
+password=Mot de passe
 mySiteBaseURL=URL de MySite (applicable pour MOSS2007)
 includedURls=Inclure les URL correspondant aux formats suivants :
 excludedURls=Ne pas inclure les URL correspondant aux formats suivants\u00a0:
