--- a/projects/sharepoint/config/SharepointConnectorResources_it.properties
+++ b/projects/sharepoint/config/SharepointConnectorResources_it.properties
@@ -2,7 +2,7 @@
 sharepointUrl=URL di scansione
 domain=Dominio
 username=Nome utente
-Password=Password
+password=Password
 mySiteBaseURL=URL MySite (disponibile per MOSS2007)
 includedURls=Includi URL che corrispondono ai seguenti pattern
 excludedURls=Non includere URL che corrispondono ai seguenti pattern
