--- a/projects/sharepoint/config/SharepointConnectorResources_ja.properties
+++ b/projects/sharepoint/config/SharepointConnectorResources_ja.properties
@@ -2,7 +2,7 @@
 sharepointUrl=\u30af\u30ed\u30fc\u30eb URL
 domain=\u30c9\u30e1\u30a4\u30f3
 username=\u30e6\u30fc\u30b6\u30fc\u540d
-Password=\u30d1\u30b9\u30ef\u30fc\u30c9
+password=\u30d1\u30b9\u30ef\u30fc\u30c9
 mySiteBaseURL=MySite URL (MOSS2007 \u306b\u9069\u7528\u53ef)
 includedURls=\u6b21\u306e\u30d1\u30bf\u30fc\u30f3\u306b\u4e00\u81f4\u3059\u308b URL \u3092\u542b\u3081\u308b
 excludedURls=\u6b21\u306e\u30d1\u30bf\u30fc\u30f3\u306b\u4e00\u81f4\u3059\u308b URL \u3092\u542b\u3081\u306a\u3044
