--- a/projects/sharepoint/config/SharepointConnectorResources_no.properties
+++ b/projects/sharepoint/config/SharepointConnectorResources_no.properties
@@ -2,7 +2,7 @@
 sharepointUrl=Gjennoms\u00f8kingsadresse
 domain=Domene
 username=Brukernavn
-Password=Passord
+password=Passord
 mySiteBaseURL=Nettstedadresse til mitt nettsted (Gjelder for MOSS2007.)
 includedURls=Inkluder nettadresser som samsvarer med f\u00f8lgende m\u00f8nstre
 excludedURls=Ikke inkluder nettadresser som samsvarer med f\u00f8lgende m\u00f8nstre
