--- a/projects/sharepoint/config/SharepointConnectorResources_sv.properties
+++ b/projects/sharepoint/config/SharepointConnectorResources_sv.properties
@@ -2,7 +2,7 @@
 sharepointUrl=Genoms\u00f6k webbadress
 domain=Dom\u00e4n
 username=Anv\u00e4ndarnamn
-Password=L\u00f6senord
+password=L\u00f6senord
 mySiteBaseURL=Min webbadress (g\u00e4ller f\u00f6r MOSS2007)
 includedURls=Inkludera webbadresser som matchar f\u00f6ljande m\u00f6nster:
 excludedURls=Inkludera inte webbadresser som matchar f\u00f6ljande m\u00f6nster
