--- a/projects/sharepoint/config/SharepointConnectorResources_tr.properties
+++ b/projects/sharepoint/config/SharepointConnectorResources_tr.properties
@@ -2,7 +2,7 @@
 sharepointUrl=Tarama URL'si
 domain=Etki Alan\u0131
 username=Kullan\u0131c\u0131 Ad\u0131
-Password=Parola
+password=Parola
 mySiteBaseURL=MySite URL'si(MOSS2007 i\u00e7in ge\u00e7erli)
 includedURls=A\u015fa\u011f\u0131daki Modellerle E\u015fle\u015fen URL'leri Dahil Et
 excludedURls=A\u015fa\u011f\u0131daki Modellerle E\u015fle\u015fen URL'leri Dahil Etme
