--- a/projects/sharepoint/config/SharepointConnectorResources_zh_CN.properties
+++ b/projects/sharepoint/config/SharepointConnectorResources_zh_CN.properties
@@ -2,7 +2,7 @@
 sharepointUrl=\u6293\u53d6\u7f51\u5740
 domain=\u57df
 username=\u7528\u6237\u540d
-Password=\u5bc6\u7801
+password=\u5bc6\u7801
 mySiteBaseURL=MySite \u7f51\u5740\uff08\u9002\u7528\u4e8e MOSS2007\uff09
 includedURls=\u5305\u542b\u4e0e\u4ee5\u4e0b\u683c\u5f0f\u5339\u914d\u7684\u7f51\u5740
 excludedURls=\u4e0d\u5305\u542b\u4e0e\u4ee5\u4e0b\u683c\u5f0f\u5339\u914d\u7684\u5185\u5bb9
