--- a/projects/sharepoint/config/SharepointConnectorResources_pt_BR.properties
+++ b/projects/sharepoint/config/SharepointConnectorResources_pt_BR.properties
@@ -2,7 +2,7 @@
 sharepointUrl=Rastrear URL
 domain=Dom\u00ednio
 username=Nome de usu\u00e1rio
-Password=Senha
+password=Senha
 mySiteBaseURL=URL do meu site (aplic\u00e1vel para MOSS2007)
 includedURls=Inclua URLs correspondentes aos padr\u00f5es a seguir
 excludedURls=N\u00e3o inclua URLs correspondentes aos seguintes padr\u00f5es
