--- a/projects/sharepoint/config/SharepointConnectorResources_pt_PT.properties
+++ b/projects/sharepoint/config/SharepointConnectorResources_pt_PT.properties
@@ -2,7 +2,7 @@
 sharepointUrl=URL de crawl
 domain=Dom\u00ednio
 username=Nome de utilizador
-Password=Palavra-passe
+password=Palavra-passe
 mySiteBaseURL=URL de O meu site (aplic\u00e1vel para MOSS2007)
 includedURls=Incluir URLs que correspondam aos padr\u00f5es seguintes
 excludedURls=N\u00e3o incluir URLs que correspondam aos  padr\u00f5es seguintes
